--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,6 +28,7 @@
     <ion-fab-list side="left">
       <button ion-fab  color="light" (click)="goAdd()"><ion-icon name="add"></ion-icon></button>
       <button ion-fab  color="light" (click)="goView()"><ion-icon name="ios-list-outline"></ion-icon></button>
+      <button ion-fab  color="light" (click)="goProfile()"><ion-icon name="contact"></ion-icon></button>
     </ion-fab-list>
   </ion-fab>
 
