--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,25 +1,27 @@
 <!--
   Generated template for the IndexPage page.
-
+ <button ion-button clear (click)="del(item.key)" color="danger">Del</button>
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <button  ion-button clear (click)="logout()">Logout</button>
+  <ion-navbar hideBackButton><div style="display: flex">
+   <ion-title >Rooms</ion-title>  <button  ion-button clear style="float: right;" (click)="logout()">   <ion-icon ios="ios-log-out" md="md-log-out" color="danger"></ion-icon></button>
+  </div>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding >
 
 <ion-list>
-  <ion-item *ngFor="let item of rooms" >
+  <ion-item no-lines *ngFor="let item of rooms" >
 
-   <img style=" margin: auto" src="{{item.image}}" alt="my_rooms" height="20%" width="100%">
+   <img style=" margin: auto" src="{{item.image}}" alt="my_rooms" height="150" width="100%">
    <div style="display: flex; flex-direction: column; margin: auto">
    <h3 style="color: rgb(54, 11, 22); font-size: 15px"> {{item.RoomType}} - R {{item.Price}} p.m</h3>
     <p style="font-style:oblique">{{item.Description}}</p>
-    <button ion-button (click)="book($event, item.Price)" color="light">Book</button></div>
+    <button ion-button (click)="book($event, item.Price)" color="light">Book</button>
+   </div>
   </ion-item>
 </ion-list>
 
@@ -28,7 +30,6 @@
     <ion-fab-list side="left">
       <button ion-fab  color="light" (click)="goAdd()"><ion-icon name="add"></ion-icon></button>
       <button ion-fab  color="light" (click)="goView()"><ion-icon name="ios-list-outline"></ion-icon></button>
-      <button ion-fab  color="light" (click)="goProfile()"><ion-icon name="contact"></ion-icon></button>
     </ion-fab-list>
   </ion-fab>
 
