--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,9 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
+<ion-header>
+  <ion-navbar>
+   <ion-title>Login</ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content>
+    <img src="../../assets/icon/icons8-hotel-bed-100.png" style="display: flex; flex-direction: column;margin: auto;margin-top: 20px; padding-bottom: 100px;">
   <ion-item >
     <ion-label floating color="dark">Email</ion-label>
     <ion-input type="mail" [(ngModel)]="email" ></ion-input>
