--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -12,18 +12,13 @@
 
 <ion-content padding>
   <ion-item >
-    <ion-label  floating>Name</ion-label>
-    <ion-input type="text" [(ngModel)]="input1"></ion-input>
-  </ion-item>
-
-  <ion-item >
-      <ion-label  floating >Surname</ion-label>
-      <ion-input type="text" [(ngModel)]="input2"></ion-input>
+    <ion-label  floating>Full Name</ion-label>
+    <ion-input type="text" [(ngModel)]="user.name"></ion-input>
   </ion-item>
 
   <ion-item >
     <ion-label  floating >Cell number</ion-label>
-    <ion-input type="tel" [(ngModel)]="input3"></ion-input>
+    <ion-input type="tel" [(ngModel)]="user.cellno"></ion-input>
   </ion-item>
 
   <ion-item >
@@ -32,5 +27,5 @@
   </ion-item>
 
 
-<button ion-button (click)="updateProfile({name: input1 , surname: input2, cellno: input3, email: inputEmail})" color="secondary" style="margin: 20px"> Book</button>
+<button ion-button (click)="updateProfile({name: input1 , cellno: input3, email: inputEmail})" color="secondary" style="margin: 20px"> Save</button>
 </ion-content>
