--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -4,10 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
+<ion-header>
+  <ion-navbar>
+   <ion-title>Create user</ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding >
-
+    <img src="../../assets/icon/icons8-hotel-bed-100.png" style="display: flex; flex-direction: column;margin: auto; padding-bottom: 100px;">
   <ion-item>
     <ion-label floating color="dark">Email</ion-label>
     <ion-input type="mail" [(ngModel)]="email" ></ion-input>
