--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar hideBackButton><div style="display: flex">
-   <ion-title >Rooms</ion-title>  <button  ion-button clear style="float: right;" (click)="logout()">   <ion-icon ios="ios-log-out" md="md-log-out" color="danger"></ion-icon></button>
+  <ion-navbar hideBackButton><div style="display: flex; ">
+   <button  ion-button clear ><ion-icon style="font-size: 20px" ios="ios-menu" md="md-menu"></ion-icon></button>
+
+   <ion-title style="text-align: center">Rooms</ion-title>  <button  ion-button clear style="float: right;" (click)="logout()">   <ion-icon ios="ios-log-out" md="md-log-out" color="danger"></ion-icon></button>
   </div>
   </ion-navbar>
 </ion-header>
@@ -32,6 +34,6 @@
       <button ion-fab  color="light" (click)="goView()"><ion-icon name="ios-list-outline"></ion-icon></button>
     </ion-fab-list>
   </ion-fab>
-
+  <button  ion-button clear (click)="goProfile()" >Profile</button>
 
 </ion-content>
